apps/media/pinepods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinepods
  namespace: media
  labels:
    app: pinepods
    app.kubernetes.io/name: pinepods
    app.kubernetes.io/instance: pinepods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinepods
  template:
    metadata:
      labels:
        app: pinepods
        app.kubernetes.io/name: pinepods
        app.kubernetes.io/instance: pinepods
    spec:
      containers:
        - name: pinepods
          image: madeofpendletonwool/pinepods:0.9.0
          ports:
            - containerPort: 8040
          volumeMounts:
            - name: data
              mountPath: /opt/pinepods/downloads
              subPath: downloads
            - name: data
              mountPath: /opt/pinepods/backups
              subPath: backups
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pinepods-data
