apps/media/pinepods/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinepods-postgres
  namespace: media
  labels:
    app: pinepods-postgres
    app.kubernetes.io/name: pinepods-postgres
    app.kubernetes.io/instance: pinepods-postgres
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinepods-postgres
  template:
    metadata:
      labels:
        app: pinepods-postgres
        app.kubernetes.io/name: pinepods-postgres
        app.kubernetes.io/instance: pinepods-postgres
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pinepods-postgres
