apps/media/pinepods/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-postgres
  namespace: media
  labels:
    app: pinepods-postgres
    app.kubernetes.io/name: pinepods-postgres
    app.kubernetes.io/instance: pinepods-postgres
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: pinepods-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
