apps/media/pinepods/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods
  namespace: media
spec:
  selector:
    app: pinepods
  ports:
    - port: 8040
      targetPort: 8040
  type: ClusterIP
