apps/media/pinepods/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-valkey
  namespace: media
spec:
  selector:
    app: pinepods-valkey
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
